style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

:root {
    --orange: #D5952B;
}

html {
    scroll-behavior: smooth;
}

body {
    margin: 0 !important;
    font-family: 'Poppins', sans-serif;
}

body.fixed {
    overflow: hidden;
}

.seperator {
    height: 5px;
    background-color: var(--orange);
}

/* MOBILE NAV MENU */
#mobile-nav-menu {
    position: absolute;
    background-color: #2A2A30;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 999;
    color: white;
    padding: 10%;
    box-sizing: border-box;
    display: none;
}
#mobile-nav-menu h1 {
    width: min-content;
    cursor: pointer;
}
#mobile-nav-menu .close-button {
    position: absolute;
    top: 10%;
    right: 10%;
    width: 40px;
    height: 40px;
    cursor: pointer;
}

/* NAV */
nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    position: relative;
}
nav .logo {
    font-size: 50px;
    color: white;
    position: relative;
    margin: 0;
}
nav .sections {
    display: flex;
    gap: 60px;
}
nav .sections h1 {
    color: white;
    font-size: 20px;
    position: relative;
    cursor: pointer;
}

nav .menu-button {
    display: none;
    width: 40px;
    height: 40px;
    cursor: pointer;
    position: absolute;
    right: 0;
    z-index: 2;
}

@media (max-width: 800px) {
    nav .sections {
        display: none;
    }
    nav .menu-button {
        display: block;
    }

    #mobile-nav-menu.show {
        display: block;
    }
}

/* TEXT HOVER EFFECT */
.has-hover {
    position: relative;
}
.has-hover .hover-effect {
    width: 0px;
    height: 4px;
    background-color: var(--orange);
    position: absolute;
    right: 0;
    bottom: 0;
    transition: width ease 0.3s;
}
.has-hover:hover .hover-effect {
    left: 0;
    width: 100%;
}

/* TEXT DOT */
.dot {
    height: 20%;
    aspect-ratio: 1 / 1;
    border-radius: 50%;
    background-color: var(--orange);
    position: absolute;
    bottom: 20%;
    margin-left: 5px;
}

/* HOME SECTION */
.home-section {
    width: 100%;
    height: 100%;
    background-color: #2A2A30;
    padding: 50px 10% 50px 10%;
    box-sizing: border-box;
    position: relative;
}
.home-section > img {
    top: 0px;
    left: 0px;
    height: 100%;
    width: 100%;
    object-fit: cover;
    opacity: 20%;
    position: absolute;
}

.home-section .content {
    display: flex;
    justify-content: space-between;
    height: 70%;
    margin-top: 10vh;
    margin-bottom: 20vh;
}

.home-section .content {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.home-section .content h1 {
    color: white;
    position: relative;
    font-size: 6em;
    margin: 0;
}

.home-section .content .links {
    display: flex;
    align-items: center;
    gap: 10px;
    margin-top: 20px;
    margin-bottom: 50px;
}
.home-section .content .links a {
    color: white;
    font-size: 20px;
    z-index: 2;
    text-decoration: none;
}
.home-section .content .links .vertical-bar {
    width: 3px;
    height: 20px;
    background-color: white;
}

.home-section .content .contact-button {
    padding: 20px;
    border: solid 5px var(--orange);
    display: flex;
    align-items: center;
    justify-content: center;
    color: var(--orange);
    font-size: 20px;
    font-weight: bold;
    letter-spacing: 3px;
    width: min-content;
    white-space: nowrap;
    transition: background-color ease 0.3s;
    z-index: 2;
    cursor: pointer;
}
.home-section .content .contact-button:hover {
    background-color: var(--orange);
    color: white;
}

.home-section .content .right-side {
    max-width: 600px;
    display: flex;
    flex-direction: column;
    justify-content: center;
}
.home-section .content .right-side .section-title {
    color: var(--orange);
    font-size: 30px;
    margin: 0;
}
.home-section .content .right-side h1 {
    margin: 0;
    margin-bottom: 30px;
    color: white;
    font-size: 60px;
    line-height: 65px;
}
.home-section .content .right-side .description {
    margin: 0;
    color: white;
    font-size: 20px;
    opacity: 60%;
}

/* ABOUT SECTION */
.about-section {
    background-color: #2B292C;
    width: 100%;
    height: 100%;
    position: relative;
    padding: 50px 20% 50px 20%;
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    align-items: center;
}
.about-section .section-fade {
    top: -50px;
    left: 0px;
    position: absolute;
    width: 100%;
    height: 50px;
    background: linear-gradient(180deg, transparent, #2B292C);
}

.about-section .content {
    max-width: 700px;
    display: flex;
    gap: 30px;
}
.about-section .content p {
    width: 70%;
    color: white;
    font-size: 20px;
}
.about-section .content .picture {
    width: 30%;
    aspect-ratio: 1 / 1;
    position: relative;
    height: min-content;
}
.about-section .content .picture img {
    width: 100%;
    position: absolute;
    z-index: 2;
}
.about-section .content .picture div {
    width: 100%;
    height: 100%;
    position: absolute;
    top: 15px;
    left: 15px;
    border: solid 5px var(--orange);
}

@media (max-width: 800px) {
    .about-section .content {
        flex-direction: column;
        align-items: center;
    }
    .about-section .content p {
        width: 100%;
        text-align: center;
    }
}

/* PORTFOLIO SECTION */
.portfolio-section {
    background-color: #2d2b2e;
    width: 100%;
    height: 100%;
    position: relative;
    padding: 50px 20% 50px 20%;
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.section-title {
    color: var(--orange);
    font-size: 25px;
    margin: 0;
    width: 100%;
    text-align: center;
}

.title {
    color: white;
    font-size: 2.5em;
    margin: 0;
    width: 100%;
    text-align: center;
}

.projects {
    list-style: none;
    padding: 0;
    margin: 0;
    max-width: 1000px;
}
.project {
    position: relative;
    display: grid;
    gap: 10px;
    grid-template-columns: repeat(12, 1fr);
    -moz-box-align: center;
    align-items: center;
    margin-bottom: 100px;
}

.project:nth-of-type(2n+1) .project-content {
    grid-column: 7 / -1;
    text-align: right;
}
.project .project-content {
    position: relative;
    grid-area: 1 / 1 / -1 / 7;
}

.project .project-overline {
    margin: 10px 0;
    color: var(--orange);
    font-size: 20px;
    font-weight: 400;
}

@media (min-width: 768px) {
    .project .project-title {
        margin: 0 0 20px;
    }
}
.project .project-title {
    color: white;
    font-size: clamp(24px, 5vw, 28px);
}

.project .project-description {
    box-shadow: 0 10px 30px -15px #2F2F36;
    position: relative;
    z-index: 2;
    padding: 15px;
    border-radius: 8px;
    background-color: #2F2F36;
    color: white;
    font-size: 15px;
}
.project .project-description {
    margin: 0;
}

.project:nth-of-type(2n+1) .project-tags {
    -moz-box-pack: end;
    justify-content: flex-end;
}
.project .project-tags {
    display: flex;
    flex-wrap: wrap;
    position: relative;
    z-index: 2;
    margin: 25px 0 10px;
    padding: 0;
    list-style: none;
}

.project:nth-of-type(2n+1) .project-tags li {
    margin: 0 0 5px 20px;
}
.project .project-tags li {
    margin: 0 20px 5px 0;
    color: white;
    font-size: 18px;
    white-space: nowrap;
}

.project:nth-of-type(2n+1) .project-links {
    -moz-box-pack: end;
    justify-content: flex-end;
    margin-left: 0;
    margin-right: -10px;
}
.project .project-links {
    display: flex;
    -moz-box-align: center;
    align-items: center;
    position: relative;
    margin-top: 10px;
    color: white;
}

.project .project-links a {
    display: flex;
    -moz-box-pack: center;
    justify-content: center;
    -moz-box-align: center;
    align-items: center;
    padding: 10px;
}
.project .project-links img {
    width: 35px;
    height: 35px;
}

.project:nth-of-type(2n+1) .project-image {
    grid-column: 1 / 8;
}
.project .project-image {
    box-shadow: 0 10px 30px -15px #2F2F36;
    grid-area: 1 / 6 / -1 / -1;
    position: relative;
    z-index: 1;
}

.project .project-image .image-wrapper {
    border-radius: 8px;
    width: 100%;
    max-width: 100%;
    vertical-align: middle;
    display: inline-block;
    position: relative;
    overflow: hidden;
}

.project .project-image img {
    bottom: 0;
    height: 100%;
    left: 0;
    margin: 0;
    max-width: none;
    padding: 0;
    position: absolute;
    right: 0;
    top: 0;
    width: 100%;
    object-fit: cover;
    box-sizing: inherit;
}

/* CONTACT SECTION */

.contact-section {
    background-color: #2B292C;
    width: 100%;
    height: 100%;
    position: relative;
    padding: 50px 20% 50px 20%;
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.contact-section .description {
    max-width: 600px;
    color: white;
    text-align: center;
    margin-bottom: 50px;
}
.contact-section .links {
    display: flex;
    align-items: center;
    gap: 20px 50px;
}
.contact-section .links > div {
    background-color: #242225;
    display: flex;
    padding: 20px;
    box-sizing: border-box;
    gap: 20px;
    height: min-content;
    align-items: center;
}
.contact-section .links img {
    width: 20px;
    height: 20px;
}
.contact-section .links a {
    margin: 0;
    color: var(--orange);
    font-size: 20px;
    font-weight: bold;
    text-decoration: none;
    white-space: nowrap;
}

@media (max-width: 800px) {
    .contact-section .links {
        flex-direction: column;
    }
}

